--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
-apply plugin: 'java' 
 apply plugin: 'application'
+apply plugin: 'eclipse'
+apply plugin: 'java'
 compileJava.options.encoding = 'UTF-8'
 mainClassName = 'suite.cli.Main'
+
+allprojects {
+	sourceCompatibility = JavaVersion.VERSION_12
+	targetCompatibility = JavaVersion.VERSION_12
+}
 
 dependencies {
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'
@@ -9,8 +15,18 @@ dependencies {
 	compile group: 'com.nativelibs4java', name: 'bridj', version: '0.7.0'
 	compile group: 'com.nativelibs4java', name: 'javacl', version: '1.0.0-RC4'
 	compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
-	compile group: 'log4j', name: 'log4j', version: '1.2.17'
+	compile group: 'io.vertx', name: 'vertx-core', version: '3.7.0'
+	compile group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
 	compile group: 'junit', name: 'junit', version: '4.12'
+	compile group: 'log4j', name: 'log4j', version: '1.2.17'
+	compile group: 'net.java.dev.jna', name: 'jna', version: '5.2.0'
+	compile group: 'org.apache.bcel', name: 'bcel', version: '6.3.1'
+	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.8'
+	compile group: 'org.apache.spark', name: 'spark-core_2.12', version: '2.4.1', {
+		exclude group: 'xml-apis', module: 'xml-apis'
+	}
+	compile group: 'org.apache.spark', name: 'spark-mllib_2.12', version: '2.4.1'
+	compile group: 'org.telegram', name: 'telegrambots', version: '4.1.2'
 }
 
 repositories {
