--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ allprojects {
 
 dependencies {
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
+	compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
+	compile group: 'com.itextpdf.tool', name: 'xmlworker', version: '5.5.13.1'
 	compile group: 'com.jcraft', name: 'jsch', version: '0.1.54'
 	compile group: 'com.nativelibs4java', name: 'bridj', version: '0.7.0'
 	compile group: 'com.nativelibs4java', name: 'javacl', version: '1.0.0-RC4'
