--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,34 @@
-apply plugin: 'application'
-apply plugin: 'eclipse'
-apply plugin: 'java'
-compileJava.options.encoding = 'UTF-8'
-mainClassName = 'suite.cli.Main'
+apply plugin: "application"
+apply plugin: "eclipse"
+apply plugin: "java"
+compileJava.options.encoding = "UTF-8"
+mainClassName = "suite.cli.Main"
 
 allprojects {
-	sourceCompatibility = JavaVersion.VERSION_12
-	targetCompatibility = JavaVersion.VERSION_12
+	sourceCompatibility = JavaVersion.VERSION_14
+	targetCompatibility = JavaVersion.VERSION_14
 }
 
 dependencies {
-	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
-	compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
-	compile group: 'com.itextpdf.tool', name: 'xmlworker', version: '5.5.13.1'
-	compile group: 'com.jcraft', name: 'jsch', version: '0.1.54'
-	compile group: 'com.nativelibs4java', name: 'bridj', version: '0.7.0'
-	compile group: 'com.nativelibs4java', name: 'javacl', version: '1.0.0-RC4'
-	compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
-	compile group: 'io.vertx', name: 'vertx-core', version: '3.7.0'
-	compile group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
-	compile group: 'log4j', name: 'log4j', version: '1.2.17'
-	compile group: 'net.java.dev.jna', name: 'jna', version: '5.2.0'
-	compile group: 'org.apache.bcel', name: 'bcel', version: '6.3.1'
-	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.8'
-	compile group: 'org.apache.spark', name: 'spark-core_2.12', version: '2.4.1', {
-		exclude group: 'xml-apis', module: 'xml-apis'
+	compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.9.9"
+	compile group: "com.itextpdf", name: "itextpdf", version: "5.5.13.1"
+	compile group: "com.itextpdf.tool", name: "xmlworker", version: "5.5.13.1"
+	compile group: "com.jcraft", name: "jsch", version: "0.1.54"
+	compile group: "com.nativelibs4java", name: "bridj", version: "0.7.0"
+	compile group: "com.nativelibs4java", name: "javacl", version: "1.0.0-RC4"
+	compile group: "commons-logging", name: "commons-logging", version: "1.2"
+	compile group: "io.vertx", name: "vertx-core", version: "3.7.0"
+	compile group: "javax.mail", name: "mail", version: "1.5.0-b01"
+	compile group: "log4j", name: "log4j", version: "1.2.17"
+	compile group: "net.java.dev.jna", name: "jna", version: "5.2.0"
+	compile group: "org.apache.bcel", name: "bcel", version: "6.3.1"
+	compile group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.8"
+	compile group: "org.apache.spark", name: "spark-core_2.12", version: "2.4.1", {
+		exclude group: "xml-apis", module: "xml-apis"
 	}
-	compile group: 'org.apache.spark', name: 'spark-mllib_2.12', version: '2.4.1'
-	compile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
-	compile group: 'org.telegram', name: 'telegrambots', version: '4.1.2'
+	compile group: "org.apache.spark", name: "spark-mllib_2.12", version: "2.4.1"
+	compile group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "5.6.0"
+	compile group: "org.telegram", name: "telegrambots", version: "4.1.2"
 }
 
 repositories {
@@ -36,8 +36,8 @@ repositories {
 }
 
 run {
-	if (project.hasProperty('args'))
-		args project.args.split('\\s+')
+	if (project.hasProperty("args"))
+		args project.args.split("\\s+")
 	standardInput System.in
 }
 
